[package]
name = "nodem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
console = "0.15.5"
regex = "1.7.1"
reqwest = "0.11.14"
select = "0.6.0"
